--- a/evotingmobile/app/src/main/res/navigation/mobile_navigation.xml
+++ b/evotingmobile/app/src/main/res/navigation/mobile_navigation.xml
@@ -9,5 +9,7 @@
         android:id="@+id/nav_home"
         android:name="com.example.e_voting_mobile.ui.login.LoginFragment"
         android:label="@string/login"
-        tools:layout="@layout/fragment_login" />
+        tools:layout="@layout/fragment_login" >
+    </fragment>
+
 </navigation>
