--- a/evotingmobile/app/src/main/res/layout/app_bar_history.xml
+++ b/evotingmobile/app/src/main/res/layout/app_bar_history.xml
@@ -24,7 +24,16 @@
     <include layout="@layout/content_history" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/fab_history"
+        android:id="@+id/support_call"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|end"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="90dp"
+        app:srcCompat="@android:drawable/stat_sys_phone_call" />
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/support_email"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
