--- a/evotingmobile/app/src/main/res/layout/fragment_login.xml
+++ b/evotingmobile/app/src/main/res/layout/fragment_login.xml
@@ -1,87 +1,63 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ui.login.LoginFragment">
-    <LinearLayout  android:layout_width="match_parent"
+
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:clipChildren="false"
         android:clipToPadding="false"
         android:orientation="vertical"
         android:padding="24dp"
         android:paddingTop="16dp">
+
         <ImageView
             android:id="@+id/imageView"
             android:layout_width="164dp"
             android:layout_height="161dp"
             android:layout_gravity="center_horizontal"
-            android:contentDescription="@string/logo"
-            android:src="@mipmap/voting_logo"
             android:layout_marginTop="48dp"
-            android:layout_marginBottom="100dp"/>
-    <EditText
-        android:id="@+id/editEmail"
-        android:layout_width="325dp"
-        android:layout_height="88dp"
-        android:autofillHints="@string/enter_email"
-        android:focusable="true"
-        android:hint="@string/enter_email"
-        android:imeOptions="actionDone"
-        android:inputType="textEmailAddress"
-        android:textColorHighlight="#ff7eff15"
-        android:textColorHint="#A6A3A5"
-        android:layout_marginBottom="16dp"
-        android:layout_gravity="center_horizontal"
-        android:padding="20dp"/>
+            android:layout_marginBottom="100dp"
+            android:contentDescription="@string/logo"
+            android:src="@mipmap/ic_launcher_logo" />
 
-<!--        <com.google.android.material.textfield.TextInputLayout-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:layout_margin="4dp"-->
-<!--            android:hint="@string/enter_email"-->
-<!--            android:id="@+id/editEmail">-->
+        <EditText
+            android:id="@+id/editEmail"
+            android:layout_width="325dp"
+            android:layout_height="88dp"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginBottom="16dp"
+            android:autofillHints="@string/enter_email"
+            android:focusable="true"
+            android:hint="@string/enter_email"
+            android:imeOptions="actionDone"
+            android:inputType="textEmailAddress"
+            android:padding="20dp"
+            android:textColorHighlight="#ff7eff15"
+            android:textColorHint="#A6A3A5" />
 
-<!--            <com.google.android.material.textfield.TextInputEditText-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:inputType="text"-->
-<!--                android:maxLines="1" />-->
-<!--        </com.google.android.material.textfield.TextInputLayout>-->
+        <EditText
+            android:id="@+id/editPassword"
+            android:layout_width="325dp"
+            android:layout_height="88dp"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginBottom="70dp"
+            android:autofillHints="@string/password"
+            android:ems="10"
+            android:hint="@string/password"
+            android:inputType="textPassword"
+            android:padding="20dp"
+            android:textColorHint="#A6A3A5" />
 
-    <EditText
-        android:id="@+id/editPassword"
-        android:layout_width="325dp"
-        android:layout_height="88dp"
-        android:autofillHints="@string/password"
-        android:ems="10"
-        android:hint="@string/password"
-        android:inputType="textPassword"
-        android:textColorHint="#A6A3A5"
-        android:layout_marginBottom="70dp"
-        android:layout_gravity="center_horizontal"
-        android:padding="20dp"/>
-<!--        <com.google.android.material.textfield.TextInputLayout-->
-<!--            android:id="@+id/editPassword"-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:layout_margin="4dp"-->
-<!--            android:hint="@string/password"-->
-<!--            app:errorEnabled="true">-->
-
-<!--            <com.google.android.material.textfield.TextInputEditText-->
-<!--                android:id="@+id/password_edit_text"-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:inputType="textPassword"/>-->
-<!--        </com.google.android.material.textfield.TextInputLayout>-->
         <Button
             android:id="@+id/login_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/login_text_btn"
+            android:layout_gravity="center_horizontal"
             android:layout_marginBottom="16dp"
-            android:layout_gravity="center_horizontal"/>
+            android:text="@string/login_text_btn" />
     </LinearLayout>
 </ScrollView>
