--- a/evotingmobile/app/src/main/res/menu/activity_history_drawer.xml
+++ b/evotingmobile/app/src/main/res/menu/activity_history_drawer.xml
@@ -5,7 +5,7 @@
 
     <group android:checkableBehavior="single">
         <item
-            android:id="@+id/nav_history"
+            android:id="@+id/nav_logout"
             android:title="@string/logout" />
     </group>
 </menu>
