--- a/evotingmobile/app/src/main/res/navigation/history_navigation.xml
+++ b/evotingmobile/app/src/main/res/navigation/history_navigation.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/nav_history"
-        android:name="com.example.e_voting_mobile.ui.login.HistoryFragment"
+        android:name="com.example.e_voting_mobile.ui.history.HistoryFragment"
         android:label="Voting history"
         tools:layout="@layout/fragment_history" />
 </navigation>
